Update experiment code

--- a/experiment_code/hackrl/config.yaml
+++ b/experiment_code/hackrl/config.yaml
@@ -129,4 +129,6 @@ ttyrec_envpool_size: 4
 ttyrec_cpus: 10 
 
 syllabus: True
-curriculum_method: sq
+curriculum_method: dr
+exp_name: Domain Randomization
+run_id: 0
