Update reward norm, new metrics, and eval system

--- a/experiment_code/hackrl/config.yaml
+++ b/experiment_code/hackrl/config.yaml
@@ -41,14 +41,14 @@ discounting: 0.999
 entity: null
 entropy_cost: 0.001
 env:
-  name: challenge  # One of challenge, staircase, pet, eat, gold, score, scout, oracle.
+  name: seed  # One of challenge, staircase, pet, eat, gold, score, scout, oracle.
   max_episode_steps: 100000
 exp_point: point-A       # spare parameter, useful for wandb grouping
 exp_set: experiment-set  # spare parameter, useful for wandb grouping
 fixup_init: true
 fn_penalty_step: constant
 grad_norm_clipping: 4
-group: group
+group: dr-seed
 learning_rate: 0.0002
 # Savedir is used for storing the checkpoint(s),
 # including flags and any global settings/stats for the training
@@ -129,6 +129,8 @@ ttyrec_envpool_size: 4
 ttyrec_cpus: 10 
 
 syllabus: True
-curriculum_method: centralplr
-exp_name: Central Prioritized Level Replay
+curriculum_method: dr
+exp_name: Domain Randomization Seed
 run_id: 1
+eval_episodes: 10
+per_task_reward_norm: False
