Fix stalling with Syllabus

--- a/experiment_code/hackrl/config.yaml
+++ b/experiment_code/hackrl/config.yaml
@@ -21,7 +21,7 @@ hydra:
     dir: "${localdir}"
 
 activation_function: relu
-actor_batch_size: 512 # may try: 1, 8, 32; original: 512
+actor_batch_size: 256 # may try: 1, 8, 32; original: 512
 add_image_observation: True
 adam_beta1: 0.9
 adam_beta2: 0.999
@@ -48,7 +48,7 @@ exp_set: experiment-set  # spare parameter, useful for wandb grouping
 fixup_init: true
 fn_penalty_step: constant
 grad_norm_clipping: 4
-group: regression-simple-testing
+group: lp-testing
 learning_rate: 0.0002
 # Savedir is used for storing the checkpoint(s),
 # including flags and any global settings/stats for the training
@@ -74,7 +74,7 @@ reward_clip: 10
 reward_scale: 1
 savedir: "/checkpoint/${env:USER}/hackrl/${project}/${group}"
 state_counter: none
-total_steps: 10_000_000_000
+total_steps: 500_000_000
 unroll_length: 32
 use_bn: false
 use_lstm: true
@@ -129,12 +129,13 @@ ttyrec_envpool_size: 4
 ttyrec_cpus: 10 
 
 syllabus: True
-curriculum_method: simpleplr
-exp_name: Queue Testing
+curriculum_method: learning_progress
+exp_name: LP Testing
 run_id: 1
 eval_episodes: 50
 per_task_reward_norm: False
 num_seeds: 200
+eval_interval: 10
 
 plr:
   staleness_coef: 0.1
