--- a/experiment_code/hackrl/config.yaml
+++ b/experiment_code/hackrl/config.yaml
@@ -140,8 +140,14 @@ eval_interval: 10
 plr:
   staleness_coef: 0.1
   temperature: 0.1
-  alpha: 0.0
+  alpha: 1.0
   strategy: value_l1
 
 learning_progress:
   ema_alpha: 0.1
+  p_theta: 0.1
+
+learnability:
+  topk: 10
+  learnable_prob: 0.5
+  sampling: "topk"
